--- a/starkcli.cabal
+++ b/starkcli.cabal
@@ -22,5 +22,22 @@ executable starkcli
   build-depends:       base >=4.9 && <4.10,
                        docopt,
                        MissingH
-  hs-source-dirs:      src
+  hs-source-dirs:      src,
+                       test
   default-language:    Haskell2010
+  exposed-modules: Component
+
+test-suite test-starkcli
+  type:
+    exitcode-stdio-1.0
+  main-is:
+    MainSpec.hs
+  hs-source-dirs:
+    src,
+    test
+  build-depends:
+    base >=4.9 && <4.10,
+    docopt,
+    MissingH,
+    hspec
+
